@@ -1,4 +1,6 @@
 Version 1.3.0
+  Enhancements:
+  - Add support for IMPORT FOREIGN SCHEMA for PostgreSQL 9.5 and higher.
   Bugfixes:
   - The server crashed for the constructs like "<column> = ANY (NULL)".
     Report and patch by dreckard.
